--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: c
 before_install: sudo apt-get update
 install: sudo apt-get install libgsl0-dev libcfitsio3-dev libatlas-base-dev libncurses5-dev libqhull-dev libqhull5
-script: sudo ln -s /usr/lib/libqhull.a /usr/lib/libqhullstatic.a && sudo ln -s /usr/include/qhull /usr/include/libqhull && export PATHTOLIME=`pwd` && cd example && ../lime model.c
+script: sudo ln -s /usr/lib/libqhull.a /usr/lib/libqhullstatic.a && sudo ln -s /usr/include/qhull /usr/include/libqhull && export PATHTOLIME=`pwd` && sed -i -e "s|silent 0|silent 1|" src/lime.h && cd example && ../lime model.c
