Added capability to work with a python model file. This includes:   - A new Makefile target 'python'.
  - Four new *.{c,h} modules, compiled in the above target.

  - A python class-definition module in a directory 'python'.

  - A template python model file in example/.

--- a/Makefile.srcs
+++ b/Makefile.srcs
@@ -52,6 +52,11 @@ CONVSOURCES = \
 	src/popsout.c\
 	src/predefgrid.c
 
+PYSOURCES = \
+	src/pydefaults.c\
+	src/pymain.c\
+	src/pyutils.c
+
 COREINCLUDES = \
 	src/dims.h\
 	src/collparts.h\
@@ -72,4 +77,7 @@ CONVINCLUDES = \
 	src/gridio.h\
 	src/inpars.h\
 	src/lime.h
+
+PYINCLUDES = \
+	src/pytypes.h
 
