This is intended to contain all the functionality for LIME 1.9.
- The business of passing variables OLD_FITSIO and FUNNY_QHULL to the code in order to ensure the code can find the respective include files is unnecessary. The configure script now simply passes the appropriate paths to the Makefile.

- The configure script is more neatly arranged.

- Some slight rearrangements were made to the Makefile.

- Scripts pyrc.sh and pyrc.csh were added to set the environment to allow running the python Lime task.

- A subdirectory 'casa' was added. This contains files for two CASA tasks, limesolver and raytrace, as well as a test script.

- In python/par_classes.py, all the string parameters now default to None rather than ''.

- In src:
  + The header file lime.h has been further broken up, with new header files constants.h, defaults.h, lime_config.h and ufunc_types.h added.

  + Functions checkFwrite() and charPtrIsNullOrEmpty() added to aux.c.

  + 'Bare' printf's removed from collparts.c.

  + In order to avoid duplicated code, the following changes have been made:
    * The default-function recipes in defaults.c have been renamed as 'void default_density()' etc.
    * These are declared in the new header file defaults.h.
    * A new module lime-defaults.c contains the old 'void __attribute__((weak)) density()' etc functions, but these now pipe directly through to the functions in defaults.c.
    * The former pydefaults.c has been deleted - pylime now compiles with defaults.c.

  + The python functions have been renamed and expanded.

  + New function freeInputPars() has been added to frees.c (moved from main.c).

  + In grid.sanityCheckOfRead() a check for par->nSolveItersDone>0 has been added in the case that populations were read from the grid file. By definition, if population values exist, we have done at least 1 iteration of calculating them (even if they are guessed).

  + A bug was fixed in grid.readOrBuildGrid() in which a too-long string was attempted to be spr

--- a/Makefile.srcs
+++ b/Makefile.srcs
@@ -9,13 +9,13 @@
 CORESOURCES = \
 	src/aux.c\
 	src/collparts.c\
+	src/defaults.c\
 	src/fastexp.c\
 	src/frees.c\
 	src/grid2fits.c\
 	src/grid.c\
 	src/gridio.c\
 	src/grid_aux.c\
-	src/messages.c\
 	src/molinit.c\
 	src/popsin.c\
 	src/popsout.c\
@@ -31,8 +31,9 @@ CORESOURCES = \
 	src/writefits.c
 
 STDSOURCES = \
-	src/defaults.c\
-	src/main.c
+	src/lime_defaults.c\
+	src/main.c\
+	src/messages.c
 
 HDF5SOURCES = \
 	src/grid2hdf5.c
@@ -53,19 +54,26 @@ CONVSOURCES = \
 	src/predefgrid.c
 
 PYSOURCES = \
-	src/pydefaults.c\
-	src/pymain.c\
-	src/pyutils.c
+	src/messages.c\
+	src/py_main.c\
+	src/py_messages.c\
+	src/py_models.c\
+	src/py_utils.c
 
 COREINCLUDES = \
-	src/dims.h\
 	src/collparts.h\
+	src/constants.h\
+	src/defaults.h\
+	src/dims.h\
 	src/grid2fits.h\
+	src/grid2hdf5.h\
 	src/gridio.h\
 	src/inpars.h\
+	src/lime_config.h\
 	src/lime.h\
 	src/raythrucells.h\
-	src/tree_random.h
+	src/tree_random.h\
+	src/ufunc_types.h
 
 HDF5INCLUDES = \
 	src/grid2hdf5.h
@@ -79,5 +87,7 @@ CONVINCLUDES = \
 	src/lime.h
 
 PYINCLUDES = \
-	src/pytypes.h
+	src/error_codes.h\
+	src/py_lime.h\
+	src/py_utils.h
 
