add a sphinx-gallery (warning: this is likely to break readthedocs... there are lots of little bugs to fix)

--- a/.rtd-environment.yml
+++ b/.rtd-environment.yml
@@ -9,5 +9,5 @@ dependencies:
     - matplotlib
     - numpy
     - pandas
-#   - pip:
-#       - dependency_from_pip
+    - pip:
+      - "git+https://github.com/sphinx-gallery/sphinx-gallery.git"
