--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	url = https://github.com/astropy/astropy-helpers.git
 	path = astropy_helpers
 	branch = refs/heads/v2.0.6
+[submodule "lime"]
+	path = lime
+	url = https://github.com/andizq/lime.git
+	branch = sf3dmodels
