pandas version rtd

--- a/.rtd-environment.yml
+++ b/.rtd-environment.yml
@@ -4,10 +4,10 @@ channels:
     - astropy
 
 dependencies:
-    - astropy
-    - Cython
-    - matplotlib
-    - numpy
+#    - astropy
+#    - Cython
+#    - matplotlib
+#    - numpy
     - sphinx-astropy
 #    - pandas
 #    - pip:
