--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,6 +1,9 @@
 conda:
   file: .rtd-environment.yml
 
+build:
+  image: latest
+
 python:
-   version: 3.6
-   
+  version: 3.6
+  setup_py_install: true
