--- a/.rtd-environment.yml
+++ b/.rtd-environment.yml
@@ -8,7 +8,7 @@ dependencies:
     - Cython
     - matplotlib
     - numpy
-    - sphinx-astropy
+#    - sphinx-astropy
     - pandas
 #    - pip:
 #       - dependency_from_pip
