using pip instead of conda to install deps in readthedocs

--- a/.rtd-environment.yml
+++ b/.rtd-environment.yml
@@ -5,7 +5,7 @@ channels:
     - conda-forge
 
 dependencies:
-#    - astropy=2.0.9
+    - astropy=2.0.9
 #    - cython
 #    - matplotlib
 #    - numpy
