--- a/setup.cfg
+++ b/setup.cfg
@@ -39,8 +39,7 @@ exclude = extern,sphinx,*parsetab.py
 [metadata]
 package_name = sf3dmodels
 description = 3D Modelling package of Star Forming regions
-long_description = SF3dmodels is a star forming region(s) modelling package that brings together analytical models in order to compute their physical properties in a 3D grid. The package can couple different models in a single grid to recreate complex star forming systems as those being revealed by current instruments. The output data can be read with LIME or RADMC-3D to carry out radiative transfer calculations.
-#SF3dmodels is a star-forming-region(s) modelling package that brings together analytical pmodels in order to compute physical properties in a 3D grid. The package can couple different models in a single grid to recreate complex star forming systems as those being revealed by current telescopes and interferometersrs. The output data is compatible with LIME or RADMC-3D in order to perform radiative transfer calculations.
+long_description = sf3dmodels is a star forming region(s) modelling package that brings together analytical models in order to compute their physical properties in a 3D grid. The package can couple different models in a single grid to recreate complex star forming systems as those being revealed by current instruments. The output data can be read with LIME or RADMC-3D to carry out radiative transfer calculations.
 author = Andres Izquierdo
 author_email = andres.izquierdo.c@gmail.com
 license = BSD 3-Clause
